--- a/templates/login.html
+++ b/templates/login.html
@@ -19,48 +19,59 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="login">Login</a>
-                </li>
-                <li class="nav-item active">
-                  <a class="nav-link" href="code">Enter Code</a>
-                </li>
-                <li class="nav-item active">
-                  <a class="nav-link" href="recordings">View Recordings</a>
-                </li>
+					<li class="nav-item active">
+						<a class="nav-link" href="login">Login</a>
+					</li>
+					<li class="nav-item active">
+						<a class="nav-link" href="code">Enter Code</a>
+					</li>
+					<li class="nav-item active">
+						<a class="nav-link" href="recordings">View Recordings</a>
+					</li>
                 </ul>
             </div>
         </nav>
-	<section class="ftco-section">
 		<div class="container">
-			<div class="row justify-content-center">
-				<div class="col-md-6 text-center mb-5">
-					<h2 class="heading-section">Login</h2>
-				</div>
-			</div>
-			<div class="row justify-content-center">
-				<div class="col-md-7 col-lg-5">
-					<div class="login-wrap p-4 p-md-5">
-		      	<div class="icon d-flex align-items-center justify-content-center">
-		      		<span class="fa fa-user-o"></span>
-		      	</div>
-		      	<h3 class="text-center mb-4">Sign In</h3>
-						<form action="#" class="login-form">
-		      		<div class="form-group">
-		      			<input type="text" class="form-control rounded-left" placeholder="Username" required>
-		      		</div>
-	            <div class="form-group d-flex">
-	              <input type="password" class="form-control rounded-left" placeholder="Password" required>
-	            </div>
-	            <div class="form-group">
-	            	<button type="submit" class="form-control btn btn-primary rounded submit px-3">Login</button>
-	            </div>
-	          </form>
-	        </div>
-				</div>
-			</div>
+			{% for message in get_flashed_messages() %}
+				<div class="alert alert-danger">{{message}}</div>
+			{% endfor %}
 		</div>
-	</section>
+		<section class="ftco-section">
+			<div class="container">
+				<div class="row justify-content-center">
+					<div class="col-md-6 text-center">
+						<h2 class="heading-section">Login</h2>
+					</div>
+				</div>
+				<div class="row justify-content-center">
+					<div class="col-md-7 col-lg-5">
+						<div class="login-wrap p-4 p-md-5">
+		      				<div class="icon d-flex align-items-center justify-content-center">
+		      					<span class="fa fa-user-o"></span>
+		      				</div>
+							<form method="POST" class="login-form">
+								<div class="form-group">
+									<input type="text" name="UserID" class="form-control rounded-left" placeholder="Username" required>
+								</div>
+								<div class="form-group d-flex">
+									<input type="password" name="Password" class="form-control rounded-left" placeholder="Password" required>
+								</div>
+								<div class="form-group">
+									<button type="submit" class="form-control btn btn-primary rounded submit px-3">Login</button>
+								</div>
+								<div class="text-center">
+									<div class="btn-group" role="group">
+										<a class="btn btn-secondary" href="reset" role="button">Reset Password</a>
+										<a class="btn btn-secondary" href="register" role="button">New User</a>
+									</div>
+								</div>
+	          				</form>
+	        			</div>
+					</div>
+				</div>
+			</div>
+		</section>
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
