--- a/templates/home.html
+++ b/templates/home.html
@@ -7,6 +7,8 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
     <title>Motion Detection</title>
     
   </head>
@@ -21,35 +23,45 @@
               <li class="nav-item active">
                 <a class="nav-link" href="login">Sign In</a>
               </li>
-              <li class="nav-item active">
-                <a class="nav-link" href="code">Enter Code</a>
-              </li>
-              <li class="nav-item active">
-                <a class="nav-link" href="recordings">View Recordings</a>
-              </li>
             </ul>
         </div>
     </nav>
     <section class="ftco-section">
-      <div class="container">
+      <div class="container-fluid">
         <div class="row justify-content-center">
           <div class="col page-header text-center">
-            <h1 class="display-3">Motion Detection System</h1>
+            <h1 class="display-3" id="Motiontitle">Motion Detection System</h1>
             <p class="lead"><i>Dedicated to Security and Privacy</i></p>
           </div>
         </div>
-        <div class="row justify-content-center" style="margin-top: 200px;">
+        
+        <div class="row justify-content-center align-items-center" style="padding-top: 50px; ">
           <div class="col text-center">
             <blockquote class="blockquote text-center">
-              <p class="mb-0">A webapp built using flask, bootstrap, sqlite3, openCV, pandas, and python3.</p>
-              <footer class="blockquote-footer">Made by <cite title="Source Title">Team7</cite></footer>
+              <p class="mb-0 ">A webapp built using flask, bootstrap, sqlite3,<br>openCV, pandas, and python3.</p>
+              <footer class="blockquote-footer">Made by <cite title="Source Title">Team7</cite> <cite title="Source Title" hidden>Nihal Gopalam</cite></footer>
             </blockquote>
           </div>
-          <div class="col text-center">
-              <a class="btn btn-outline-primary rounded px-3" href="register" role="button">Sign Up</a>
+          <div class="row justify-content-center">
+            <img src="https://github.com/nihalgopalam/MotionDetection/blob/main/Screenshot.png?raw=true" class="img-fluid" alt="Logo" >       
+          </div>
+          <div class="col btn-group-vertical" style="margin-top: 10px; margin-left: 100px;">
+              <a class="btn btn-outline-primary btn-lg w-50 rounded px-3" href="register" role="button">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
+                  <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
+                  <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
+                </svg>
+                 Sign Up 
+              </a>
+              <a class="btn btn-outline-primary btn-lg w-50 rounded px-3" href="login" role="button">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-in-right" viewBox="0 0 16 16">
+                  <path fill-rule="evenodd" d="M6 3.5a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v9a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-2a.5.5 0 0 0-1 0v2A1.5 1.5 0 0 0 6.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-8A1.5 1.5 0 0 0 5 3.5v2a.5.5 0 0 0 1 0v-2z"/>
+                  <path fill-rule="evenodd" d="M11.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H1.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3z"/>
+                </svg>
+                 Sign In
+              </a>
           </div>
         </div>
-            
       </div>
     </div>
   </section>
