--- a/templates/login.html
+++ b/templates/login.html
@@ -8,54 +8,25 @@
 	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-	<script   src="https://code.jquery.com/jquery-3.1.1.min.js"   integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="   crossorigin="anonymous"></script>
+	<script   src="https://code.jquery.com/jquery-3.5.1.min.js"   integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="   crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
+
 	<script>
-        
         $(document).ready(function(){
+
             //hide warnings
             $("small").hide();
-            $("#loginAlert").hide();
+			
 
-            //init all values from form
-            var user = $("#new_user").val();
-            var pass =  $("#new_password").val();
-
-            
-            //displays hints
+			//displays hints
             $("input").focus(function(){
-                $(this).next().show().fadeOut(500);
+                $(this).next().show();
             });
             $("input").blur(function(){
-                $(this).next().hide().fadeOut(500);
+                $(this).next().hide();
             });
-
-			$("#login").click(function(){   //on submit              
-                if(!user){ //if username and pass are not confirmed
-                    $("#loginAlert").show();
-                    $("small").show();
-                }
-
-            });
-
-			var data = [
-                {"UserID": user},
-                {"Password": pass}
-            ];
-
-            $.ajax({
-                type: "POST",
-                url: "/login_process",
-                data: JSON.stringify(data),
-                contentType: "application/json",
-                dataType: 'json' 
-            });
-
-            
-           
-           
-
         });
         
     </script>
@@ -72,12 +43,6 @@
 				  <li class="nav-item active">
 					<a class="nav-link" href="login" >Sign In</a>
 				  </li>
-				  <li class="nav-item active">
-					<a class="nav-link" href="code">Enter Code</a>
-				  </li>
-				  <li class="nav-item active">
-					<a class="nav-link" href="recordings">View Recordings</a>
-				  </li>
 				</ul>
 			</div>
 		</nav>
@@ -89,38 +54,39 @@
 					</div>
 				</div>
 				<div class="row justify-content-center">
+
 					<div class="col-md-7 col-lg-5">
 						<div class="login-wrap p-4 p-md-5">
 		      				<div class="icon d-flex align-items-center justify-content-center">
 		      					<span class="fa fa-user-o"></span>
 		      				</div>
-							<div id="loginAlert" class="alert alert-danger alert-dismissible fade show" role="alert">
-								Please make sure your passwords and pins match.
-								<button type="button" class="close" data-dismiss="alert" aria-label="Close">
-								  <span aria-hidden="true">&times;</span>
-								</button>
-							</div>
-							<form method="POST" class="login-form">
+							{% if flag %}
+							<div class="alert alert-danger alert-dismissible fade show" role="alert">
+								Please make sure your credentials are correct							</div>
+							{% endif %}
+							<form class="login-form" method="post" action="/login_process"  novalidate >
 								<div class="form-group">
-									<input type="text" id="new_user" class="form-control rounded-left" placeholder="Username"  pattern="^.{6,}$"  required>
+									<input type="text" name="UserID" id="Login_user" class="form-control rounded-left" placeholder="Username"  pattern="^.{6,}$"  required>
 									<small id="userHelp"class="form-text text-muted">Minimum 6 characters</small>
 								</div>
 								<div class="form-group">
-									<input type="password" id="new_password" class="form-control rounded-left" placeholder="Password" pattern="^(?=.*[A-Za-z])(?=.*\d)(?=.*[@$!%*#?&])[A-Za-z\d@$!%*#?&]{6,}$" required>
+									<input type="password" name="Password" id="Login_password" class="form-control rounded-left" placeholder="Password" pattern="^(?=.*[A-Za-z])(?=.*\d)(?=.*[@$!%*#?&])[A-Za-z\d@$!%*#?&]{6,}$" required>
 									<small id="passwordHelp" class="form-text text-muted">Must include more than 6 characters, a letter, a number, and a special character</small>
 								</div>
 								<div class="form-group">
-									<button id="login" type="submit" href="welcome" class="form-control btn btn-primary rounded submit px-3">Login</button>
+									<button id="login_submit" type="submit" class="form-control btn btn-primary rounded submit px-3">Login</button>
 									<a Class="form-control btn btn-secondary rounded px-3 mt-2" href="register" role="button">Sign Up</a>
 								</div>
 								<div class="text-center">
 									<a id="forgot" class="btn btn-link btn-md btn-block" href="reset" role="button">Forgot Password</a>
 								</div>
 							</form>
+							
 	        			</div>
 					</div>
 				</div>
 			</div>
+			
 		</section>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
