--- a/templates/recordings.html
+++ b/templates/recordings.html
@@ -17,20 +17,60 @@
           <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="login">Sign In</a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="code">Enter Code</a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="recordings">View Recordings</a>
-            </li>
-          </ul>
+        <ul class="nav navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="{{ url_for('login') }}">Sign In</a>
+          </li>
+        </ul>
+        <ul class="nav navbar-nav ml-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="/welcome/{{user}}">Welcome</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="/welcome/{{user}}/code">Enter Code</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="/welcome/{{user}}/recordings">Recordings</a>
+          </li>
+          <li class="ml-end nav-item active">
+            <a class="nav-link" href="/welcome/{{user}}/logout">Sign Out</a>
+          </li>
+        </ul>
       </div>
   </nav>
-
+  <section class="ftco-section">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col page-header text-center">
+          <h1 class="display-3">Recordings from {{user}}</h1>
+        </div>
+      </div>
+      <div class="row justify-content-center">
+        <table class="table table-striped table-hover">
+          <thead class="thead-light">
+            <tr>
+              <th scope = "col">#</th>
+              <th scope = "col">Date</th>
+              <th scope = "col">Start Time</th>
+              <th scope = "col">End Time</th>
+            </tr>
+          </thead>
+          <tbody>
+            {% for rows in profile %}
+            <tr>
+              <th scope="row">{{rows[0]}}</th>
+              <td>{{rows[2]}}</td>
+              <td>{{rows[1]}}</td>
+              <td>{{rows[3]}}</td>
+            </tr>
+            {% endfor %}
+          </tbody>
+  
+        </table>
+      </div>
+    </div>
+  </section>
+  
   <!-- TODO: add videos that the application downloaded and preview its info  -->
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
