--- a/templates/recordings.html
+++ b/templates/recordings.html
@@ -33,6 +33,9 @@
             <a class="nav-link" href="/welcome/{{user}}/recordings">Recordings</a>
           </li>
           <li class="ml-end nav-item active">
+            <a class="nav-link" href="/welcome/{{user}}/stream">Stream</a>
+          </li>
+          <li class="ml-end nav-item active">
             <a class="nav-link" href="/welcome/{{user}}/logout">Sign Out</a>
           </li>
         </ul>
