--- a/templates/reset.html
+++ b/templates/reset.html
@@ -93,13 +93,17 @@
                               <span aria-hidden="true">&times;</span>
                             </button>
                           </div>
+                        {% if flag %}
+							<div class="alert alert-danger alert-dismissible fade show" role="alert">
+								{{flag}}							</div>
+						{% endif %}
                         <form class="login-form" method="post" action="/reset_process"  novalidate>
                             <div class="form-group">
-                                <input type="text" id="new_user" class="form-control rounded-left" placeholder="Username"  pattern="^.{6,}$"  required>
+                                <input type="text" name="new_user" id="new_user" class="form-control rounded-left" placeholder="Username"  pattern="^.{6,}$"  required>
                                 <small id="userHelp"class="form-text text-muted">Minimum 6 characters</small>
                             </div>
                             <div class="form-group">
-                                <input type="password" id="new_password" class="form-control rounded-left" placeholder="Password" pattern="^(?=.*[A-Za-z])(?=.*\d)(?=.*[@$!%*#?&])[A-Za-z\d@$!%*#?&]{6,}$" required>
+                                <input type="password" name="new_password" id="new_password" class="form-control rounded-left" placeholder="New Password" pattern="^(?=.*[A-Za-z])(?=.*\d)(?=.*[@$!%*#?&])[A-Za-z\d@$!%*#?&]{6,}$" required>
                                 <small id="passwordHelp" class="form-text text-muted">Must include more than 6 characters, a letter, a number, and a special character</small>
                             </div>
                             <div class="form-group">
