--- a/templates/stream.html
+++ b/templates/stream.html
@@ -65,11 +65,11 @@
               </div>
           </div>
           <div class="row justify-content-center align-items-center col text-center">
-            <a id="stream" class="btn btn-outline-primary btn-md">Start</a>
-            <a id="stop" class="btn btn-outline-primary btn-md">Stop</a>
+            <!-- <a id="stream" class="btn btn-outline-primary btn-md">Start</a>
+            <a id="stop" class="btn btn-outline-primary btn-md">Stop</a> -->
           </div>
-          <div class="row justify-content-center mt-5">
-            <div class="col embed-responsive embed-responsive-21by9 img-thumbnail">
+          <div id="streamBody" class="row justify-content-center mt-5">
+            <div  class="col embed-responsive embed-responsive-21by9 img-thumbnail">
                 <video id="videoInput" class="embed-responsive-item" width="320" height="240"></video>
             </div>
            
@@ -91,7 +91,9 @@
             let dst = new cv.Mat(height, width, cv.CV_8UC1);
             let cap = new cv.VideoCapture(videoSource);
             const FPS = 30;
-            function processVideo() {
+            $("#start").click(function(){
+                $("#streamBody").toggle();
+                function processVideo() {
                 let begin = Date.now();
                 cap.read(src);
                 cv.cvtColor(src, dst, cv.COLOR_RGBA2GRAY);
@@ -99,17 +101,20 @@
                 // schedule next one.
                 let delay = 1000/FPS - (Date.now() - begin);
                 setTimeout(processVideo, delay);
-            }
-            // schedule first one.
-            setTimeout(processVideo, 0);
+                }
+                // schedule first one.
+                setTimeout(processVideo, 0);
+            });
+            
 
             $("#stop").click(function(){
                 src.delete();
                 dst.delete();
+                $("#streamBody").toggle();
                 return;
             });
     </script>
-    
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
